working on Bayes factor tutorial

--- a/tutorial_TeX/RB_BayesFactor_Tutorial/RB_BayesFactor_Tutorial_content.tex
+++ b/tutorial_TeX/RB_BayesFactor_Tutorial/RB_BayesFactor_Tutorial_content.tex
@@ -139,7 +139,7 @@ clear()
 Now set up the model as in the previous exercise. You should start with the simple Jukes-Cantor substitution model. 
 Setting up the model requires:
 \begin{enumerate}
-\item Loading the data and retrieving useful variables about the data (\EG number of sequences and taxon names).
+\item Loading the data and retrieving useful variables about it (\EG number of sequences and taxon names).
 \item Specifying the instantaneous-rate matrix of the substitution model.
 \item Specifying the tree model including branch-length variables.
 \item Creating a random variable for the sequences that evolved under the \cl{PhyloCTMC}.
