--- a/tutorial_TeX/RB_Data_Tutorial/RB_Data_Tutorial_content.tex
+++ b/tutorial_TeX/RB_Data_Tutorial/RB_Data_Tutorial_content.tex
@@ -1,7 +1,7 @@
 \section{Overview}
 
 
-This tutorial focuses on data formats used in \RevBayes.
+This tutorial describes the data formats that are used in \RevBayes.
 
 
 \subsection*{Requirements}
@@ -17,14 +17,16 @@ We assume that you have read and hopefully completed the following tutorials:
 %
 \newpage
 \FloatBarrier
-\section{Molecular Sequences}
+\section{Molecular Sequence Data}
 
 \bigskip
 \subsection{Getting Started}
 
 
 \exs{Download data and output files from: \href{http://revbayes.github.io/tutorials.html}{http://revbayes.github.io/tutorials.html}}
-\exs{Open the file \cl{primates\_cytb.nex} in your text editor. This file contains the sequences for the cytochrome B gene sampled from 13 species (Box 1). The elements of the \cl{DATA} block indicate the type of data, number of taxa, and length of the sequences.}
+\exs{Open the file \cl{primates\_cytb.nex} in your text editor. 
+This file contains the nucleotide sequences of the cytochrome B gene sampled from 13 species (Box 1). 
+The elements of the \cl{DATA} block indicate the data type, number of taxa, and sequence length.}
 
 
 \begin{center}
@@ -70,58 +72,129 @@ End;
 \end{framed}}
 
 
-\subsection{Reading Molecular Sequences}
+\subsection{Loading Molecular Sequence Data}
+We can read the data into \RevBayes~ using the \cl{readDiscreteCharacterData()} function. 
+%This function returns a \textit{vector} of data matrices and, even though there is only one element in the vector, we must index that element using the \cl{[1]} notation. 
+%(You will also note that list indexing in Rev starts with \cl{1} like in the R language.)
+{\tt \begin{snugshade*}
+\begin{lstlisting}
+data <- readDiscreteCharacterData("data/primates_cytb.nex")
+\end{lstlisting}
+\end{snugshade*}}
 
+\subsection{Querrying Dataset Attributes}
+When a dataset has been loaded into \RevBayes, we can query relevant \Rev~variables. 
+To report the current value of any variable, simply type the variable name and press enter. 
+For example, the \cl{data} variable returns general information about the sequence alignment:
+{\tt \begin{snugshade*}
+\begin{lstlisting}
+data
+|*   DNA character matrix with 23 taxa and 1141 characters
+|*   =====================================================
+|*   Origination:                      primates_cytb.nex
+|*   Number of taxa:                   23
+|*   Number of included taxa:          23
+|*   Number of characters:             1141
+|*   Number of included characters: 1141
+|*   Datatype:                         DNA
+\end{lstlisting}
+\end{snugshade*}}
+
+The \cl{data} variable has \textit{member functions} that we can use to retrieve specific attributes of the dataset. 
+These member functions include the number of taxa (\cl{data.ntaxa()}), the sequence length (\cl{data.nchar()}), etc.
+{\tt \begin{snugshade*}
+\begin{lstlisting}
+data.ntaxa()
+|*   23
+\end{lstlisting}
+\end{snugshade*}}
 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-# show some general information
-data
-|*
-|*
-|*
-
-# get some quick and useful attributes of the data
-data.ntaxa()
 data.names()	
+|*    [ "Saimiri_sciureus", "Callicebus_donacophilus", "Cebus_albifrons", ...]
 \end{lstlisting}
 \end{snugshade*}}
 
 
+%BRM: I think we may want to provide a (semi) comprehensive list of member functions/attributes here, at least common ones, perhaps in a table?
+%If so, can you tell me where to find them??
 
 \subsection{Concatenating Sequences}
-
-
-{\tt \begin{snugshade*}
-\begin{lstlisting}
-data_atpB <- readDiscreteCharacterData("data/conifer_atpB.nex")
-data_atpB <- readDiscreteCharacterData("data/conifer_atpB.nex")
-\end{lstlisting}
-\end{snugshade*}}
-
-Since the first step in this exercise is to assume a single model for both genes, we need to combine the two datasets.
-Concatenate the two data matrices using the \cl{+} operator. This returns a single data matrix with both genes.
+We can combine two or more datasets using the \cl{concatenate} function.
+First, we will read in two datasets; the first is an alignment of primate cytb sequences, the second is an alignment of cox2 sequences:
 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-data <- concatenate(data_ITS, data_rbcL, data_matK)
+data_cytb <- readDiscreteCharacterData("data/primates_cytb.nex")
+data_cox2 <- readDiscreteCharacterData("data/primates_cox2.nex")
 \end{lstlisting}
 \end{snugshade*}}
 
+Next, we will concatenate these two alignments using the \cl{concatenate} function. 
+This returns a single data matrix that combines the sequences of both gene regions.
+
+{\tt \begin{snugshade*}
+\begin{lstlisting}
+data <- concatenate(data_cytb, data_cox2)
+\end{lstlisting}
+\end{snugshade*}}
+
+We can confirm this by querying the \cl{data} variable: 
+
+{\tt \begin{snugshade*}
+\begin{lstlisting}
+data
+|*      DNA character matrix with 23 taxa and 1852 characters
+|* =====================================================
+|* Origination:                   primates_cytb.nex
+|* Number of taxa:                23
+|* Number of included taxa:       23
+|* Number of characters:          1852
+|* Number of included characters: 1852
+|* Datatype:                      DNA
+\end{lstlisting}
+\end{snugshade*}}
+%BRM: note that the ``origination'' lists the name of the first gene in the concatenated alignment
 
 
-\subsection{Removing Sites or Genes}
+\subsection{Excluding Taxa}
+We can exclude species from an alignment that is currently in memory using the \cl{removeTaxa} function.
+For example, we could exclude the outgroup species \textit{Saimiri sciureus} from our concatenated primate alignment (\cl{data}) by typing:
+
+{\tt \begin{snugshade*}
+\begin{lstlisting}
+data.removeTaxa("Saimiri_sciureus")
+\end{lstlisting}
+\end{snugshade*}}
+
+We can then confirm the removal of a species by checking the number of remaining taxa:
+{\tt \begin{snugshade*}
+\begin{lstlisting}
+data.ntaxa()
+|*   22
+\end{lstlisting}
+\end{snugshade*}}
+The number of species has decreased by one, as expected.
+We can confirm that we have excluded \textit{Saimiri sciureus} by typing:
+{\tt \begin{snugshade*}
+\begin{lstlisting}
+data.names()	
+|*    [ "Callicebus_donacophilus", "Cebus_albifrons", "Alouatta_palliata", ...]
+\end{lstlisting}
+\end{snugshade*}}
+
+\subsection{Excluding Sites or Genes}
 
 
-\subsection{Removing Taxa}
 
 
 
-\section{Morphological Data}
+\section{Discrete-Trait Data}
 
 
 
-\section{Continuous Trait Data}
+\section{Continuous-Trait Data}
 
 
 \section{Biogeographical Data}
@@ -157,23 +230,24 @@ End;
 \end{lstlisting}
 \end{framed}
 
-Range data is stored in standard Nexus format.
+Geographic range data is stored in standard Nexus format.
 In the {\tt data} block, the first line gives the dimensions of the data matrix and the second line indicates we will be using binary characters.
 The four characters correspond to areas defined by the geography file (next subsection).
-Rows in the {\tt matrix} block correspond to taxa and their range data, while columns give in which areas each taxon is present (1) or absent (0).
-For example, taxon {\tt P\_hexandra\_Oahu} is present only in area 2.
+Rows in the {\tt matrix} block correspond to taxa and their geographic range data, while columns give in which areas each taxon is present (1) or absent (0).
+For example, the geographic range of taxon {\tt P\_hexandra\_Oahu} is restricted to area 2.
 
 The {\tt trees} block gives the tree describing the shared ancestry of the study species.
-Because range evolution occurs in units of geological time, the analysis in this tutorial requires a high-quality time-calibrated phylogeny.
-This typically requires a multiple sequence alignment over several loci plus fossils for calibration.
-Since this data availability is often the limiting factor for which taxa to include for your analysis, it is best to produce the phylogeny first.
-Only afterwards should you begin assembling data for your data matrix.
-If your phylogeny cannot be calibrated (e.g. it has no fossils) your best alternative is to proceed with a time tree resulting from a divergence time estimation analysis.
+Because range evolution occurs in units of geological time, the analysis in this tutorial requires a high-quality, time-calibrated phylogeny.
+This typically requires a multiple sequence alignment over several loci and fossils for calibration.
+Since the availability of such data typically limits the taxa we can include in a biogeographic analysis, it is best to estimate the time-calibrated phylogeny first.
+Only afterwards should you begin assembling range data for your biogeographic study.
+If your phylogeny cannot be calibrated (e.g., if fossils are unavailable) your best alternative is to proceed with a time tree resulting from a divergence time estimation analysis.
+%BRM I don't understand the preceding sentence: do you mean that---when fossil information is unavailable for calibration---the best compromise if to use a tree with *relative* divergence times, rather than *absolute* divergence-time estimates?
 For this tutorial, the phylogeny is assumed to contain no uncertainty.
 
 \subsection{Atlas file}
 
-The geography used in this tutorial represents the Hawaiian archipelago.
+Here, we focus our tutorial on the Hawaiian archipelago.
 Beneath Hawaii, currently the largest and youngest island, is a volcanic hotspot that periodically creates new islands.
 The ages of these islands are fairly well known, meaning we can model range availability as a function of time.
 Following \citet{ree08}, we will lump groups of smaller islands into single areas to simplify the analysis, leaving us with four areas: Hawaii (H), Oahu (O), Maui (M; this includes Molokai and Lanai), and Kauai (K; this includes Niihau).
@@ -182,9 +256,9 @@ These areas are modeled have arisen 0.5, 1.9, 3.7, and 5.5 million years ago, re
 Although the model will use discrete-state biogeographic ranges, geographical area is naturally continuous.
 This means we must impose some discretization upon the geography to designate a set of biogeographically meaningful characters called areas.
 Different methods use different criteria for this discretization, so it is best to perform the discretization yourself rather than blindly using the discretization given from a previous study or method (but do blindly use the dataset included in this tutorial).
-Some geographies have natural discretizations: for instance, the Hawaiian archipelago forms naturally discrete areas on the basis of islands.
-For many geographies, however, it may unclear how to perform this discretization.
-Much like morphological analyses, you might choose to choose areas based on expert opinion, based on some model, or using some ``naive'' uniform discretization.
+Some geographic problems are more amenable to discretization: for instance, the Hawaiian archipelago forms naturally discrete areas on the basis of islands.
+For many geographic problems, however, it may unclear how to perform this discretization.
+Much like morphological analyses, you might decide to choose areas based on expert opinion, based on some model, or using some ``naive'' uniform discretization.
 This procedure is not part of the tutorial, but you should be aware that area definitions are not always obvious or objective.
 
 
@@ -230,7 +304,7 @@ This procedure is not part of the tutorial, but you should be aware that area de
 %\end{lstlisting}
 %\end{framed}
 
-This is called the Atlas file, which uses a file format called JSON.
+This is called the Atlas file, which uses a file format called JSON (JavaScript Object Notation).
 JSON is a lightweight format used to assign values to variables in a hierarchical manner.
 There are three main tiers to the hierarchy in the Atlas file: the atlas, the epoch, and the area.
 In the lowest tier, each area corresponds to a character in the model and is assigned it's own properties.
@@ -239,10 +313,10 @@ Because the tree and range evolution model also operate on units of geological t
 Sometimes these models are called stratified models or epochal models.
 Finally, the atlas contains the array of epochs in the highest tier.
 
-Each area is assigned a {\tt latitude} and {\tt longitude} to represent its geographical coordinates, ideally the area's centroid.
+Each area is assigned a {\tt latitude} and {\tt longitude} to represent its geographical coordinates, ideally the centroid of the area.
 If a centroid does not represent the distance between areas, splitting the area into multiple smaller areas is reasonable.
-The data augmentation approach used in this analysis allows you to use more areas as desired, whereas matrix exponentiation methods are limited to approximately ten areas.
-The distance between any two areas' coordinates inform to distance-dependent dispersal parameter ($\beta$ from the $\eta(\cdot)$ function) for range expansion events, so coordinates roughly close to the center of the area suffice.
+The data augmentation approach used in this analysis allows you to effectively specify as many areas as desired, whereas matrix exponentiation methods are limited to approximately ten areas.
+The distance between the coordinates of any two areas informs the distance-dependent dispersal parameter ($\beta$ from the $\eta(\cdot)$ function) for range expansion events, so coordinates roughly close to the center of the area suffice.
 Here, the {\tt latitude} and {\tt longitude} change in each of the four epochs, where they begin at the current location of Hawaii and drift northwesterly until they reach their current positions.
 
 In addition, each area is marked as habitable or not using the {\tt dispersalValues} array.
