Updating tutorial pdf's.

--- a/tutorial_TeX/RB_Getting_Started/RB_Getting_Started_content.tex
+++ b/tutorial_TeX/RB_Getting_Started/RB_Getting_Started_content.tex
@@ -271,6 +271,14 @@ mcmc
 \end{snugshade*}}
 
 
+\bigskip
+\subsection{RevBayes Users' Forum}
+
+An email list has been created for users of \RevBayes~to discuss \RevBayes-related topics, including: \RevBayes~installation and use, scripting and programming, phylogenetics, population genetics, models of evolution, graphical models, etc. The forum is hosted by Google Groups:
+
+\exs{\href{http://bit.ly/107aW2R}{revbayes-users}}
+
+
 \bibliographystyle{sysbio}
 \bibliography{\ResourcePath refs}
 
