--- a/tutorial_TeX/RB_Manual.tex
+++ b/tutorial_TeX/RB_Manual.tex
@@ -79,32 +79,38 @@ John P. Huelsenbeck
 \include{RB_MCMC_Tutorial/RB_MCMC_Tutorial_content}
 
 \chapter{Model Selection and Bayes Factors}
+\def \ResourcePath {RB_BayesFactor_Tutorial/}
 \include{RB_BayesFactor_Tutorial/RB_BayesFactor_Tutorial_content}
 
 
 \part{Dating}
 \chapter{Dating and Relaxed Clocks}
+\def \ResourcePath {RB_RelaxedClock_Tutorial/}
 \include{RB_RelaxedClock_Tutorial/RB_RelaxedClock_Tutorial_content}
 
 
 \part{Diversification Rate Estimation}
 \chapter{Simple Diversification Rate Estimation}
+\def \ResourcePath {RB_SimpleDiversification_Tutorial/}
 \include{RB_SimpleDiversification_Tutorial/RB_SimpleDiversification_Tutorial_content}
 
 
 \part{Gene tree - Species tree estimation}
 \chapter{Gene tree - Species tree estimation}
+\def \ResourcePath {RB_GTST_Tutorial/}
 \include{RB_GTST_Tutorial/RB_GTST_Tutorial_content}
 
 
 
 \part{Biogeography}
 \chapter{Many Area DEC}
+\def \ResourcePath {RB_Biogeography_Tutorial/}
 \include{RB_Biogeography_Tutorial/RB_Biogeography_Tutorial_content}
 
 
 \part{Phylogenetic Comparative Method}
 \chapter{Phylogenetic Comparative Analyses: Continuous Trait Evolution}
+\def \ResourcePath {RB_PhyloComparative_Tutorial/}
 \include{RB_PhyloComparative_Tutorial/RB_PhyloComparative_Tutorial_content}
 
 
